[workspace]
members = [
	"nimbus-consensus",
	"nimbus-primitives",
	"pallets/aura-style-filter",
	"pallets/author-inherent",
	"pallets/author-slot-filter",
	"parachain-template/node",
	"parachain-template/runtime",
]

[profile.release]
panic = "unwind"

[patch.crates-io]
substrate-bip39 = { git = "https://github.com/paritytech/substrate-bip39", rev = "e7c751ecb841bd7e5f114bfe5b8b64cfff19f8b8" }