[package]
name = "parachain-template-node"
authors = [ "Anonymous" ]
build = "build.rs"
description = "A Substrate node that demonstrates using the Nimbus consensus framework with instant seal and as a parachain."
edition = "2021"
homepage = "https://substrate.dev"
license = "Unlicense"
repository = "https://github.com/zeitgeistpm/cumulus/"
version = "0.9.0"

[package.metadata.docs.rs]
targets = [ "x86_64-unknown-linux-gnu" ]

[[bin]]
name = "parachain-collator"
path = "src/main.rs"

[dependencies]
codec = { package = "parity-scale-codec", version = "3.0.0" }
clap = { version = "3.2.6", features = [ "derive" ] }
derive_more = "0.99.2"
hex-literal = "0.3.1"
log = "0.4.17"
serde = { version = "1.0.119", features = [ "derive" ] }
flume = "0.10.9"

# RPC related Dependencies
jsonrpsee = { version = "0.14.0", features = ["server", "macros"] }

# Local Dependencies
nimbus-consensus = { path = "../../nimbus-consensus" }
nimbus-primitives = { path = "../../nimbus-primitives" }
parachain-template-runtime = { path = "../runtime" }

# Substrate Dependencies
frame-benchmarking = { git = "https://github.com/zeitgeistpm/substrate", branch = "polkadot-v0.9.26-libp2p" }
frame-benchmarking-cli = { git = "https://github.com/zeitgeistpm/substrate", branch = "polkadot-v0.9.26-libp2p" }

pallet-transaction-payment-rpc = { git = "https://github.com/zeitgeistpm/substrate", branch = "polkadot-v0.9.26-libp2p" }

substrate-frame-rpc-system = { git = "https://github.com/zeitgeistpm/substrate", branch = "polkadot-v0.9.26-libp2p" }
substrate-prometheus-endpoint = { git = "https://github.com/zeitgeistpm/substrate", branch = "polkadot-v0.9.26-libp2p" }

## Substrate Client Dependencies
sc-basic-authorship = { git = "https://github.com/zeitgeistpm/substrate", branch = "polkadot-v0.9.26-libp2p" }
sc-chain-spec = { git = "https://github.com/zeitgeistpm/substrate", branch = "polkadot-v0.9.26-libp2p" }
sc-cli = { git = "https://github.com/zeitgeistpm/substrate", branch = "polkadot-v0.9.26-libp2p" }
sc-client-api = { git = "https://github.com/zeitgeistpm/substrate", branch = "polkadot-v0.9.26-libp2p" }
sc-consensus = { git = "https://github.com/zeitgeistpm/substrate", branch = "polkadot-v0.9.26-libp2p" }
sc-consensus-manual-seal = { git = "https://github.com/zeitgeistpm/substrate", branch = "polkadot-v0.9.26-libp2p" }
sc-executor = { git = "https://github.com/zeitgeistpm/substrate", branch = "polkadot-v0.9.26-libp2p" }
sc-keystore = { git = "https://github.com/zeitgeistpm/substrate", branch = "polkadot-v0.9.26-libp2p" }
sc-network = { git = "https://github.com/zeitgeistpm/substrate", branch = "polkadot-v0.9.26-libp2p" }
sc-rpc = { git = "https://github.com/zeitgeistpm/substrate", branch = "polkadot-v0.9.26-libp2p" }
sc-rpc-api = { git = "https://github.com/zeitgeistpm/substrate", branch = "polkadot-v0.9.26-libp2p" }
sc-service = { git = "https://github.com/zeitgeistpm/substrate", branch = "polkadot-v0.9.26-libp2p", features = [ "wasmtime" ] }
sc-telemetry = { git = "https://github.com/zeitgeistpm/substrate", branch = "polkadot-v0.9.26-libp2p" }
sc-tracing = { git = "https://github.com/zeitgeistpm/substrate", branch = "polkadot-v0.9.26-libp2p" }
sc-transaction-pool = { git = "https://github.com/zeitgeistpm/substrate", branch = "polkadot-v0.9.26-libp2p" }
sc-transaction-pool-api = { git = "https://github.com/zeitgeistpm/substrate", branch = "polkadot-v0.9.26-libp2p" }

## Substrate Primitive Dependencies
sp-api = { git = "https://github.com/zeitgeistpm/substrate", branch = "polkadot-v0.9.26-libp2p" }
sp-block-builder = { git = "https://github.com/zeitgeistpm/substrate", branch = "polkadot-v0.9.26-libp2p" }
sp-blockchain = { git = "https://github.com/zeitgeistpm/substrate", branch = "polkadot-v0.9.26-libp2p" }
#sp-consensus = { git = "https://github.com/zeitgeistpm/substrate", branch = "polkadot-v0.9.26-libp2p" }
sp-core = { git = "https://github.com/zeitgeistpm/substrate", branch = "polkadot-v0.9.26-libp2p" }
sp-inherents = { git = "https://github.com/zeitgeistpm/substrate", branch = "polkadot-v0.9.26-libp2p" }
sp-keystore = { git = "https://github.com/zeitgeistpm/substrate", branch = "polkadot-v0.9.26-libp2p" }
sp-offchain = { git = "https://github.com/zeitgeistpm/substrate", branch = "polkadot-v0.9.26-libp2p" }
sp-runtime = { git = "https://github.com/zeitgeistpm/substrate", branch = "polkadot-v0.9.26-libp2p" }
sp-session = { git = "https://github.com/zeitgeistpm/substrate", branch = "polkadot-v0.9.26-libp2p" }
sp-timestamp = { git = "https://github.com/zeitgeistpm/substrate", branch = "polkadot-v0.9.26-libp2p" }
sp-transaction-pool = { git = "https://github.com/zeitgeistpm/substrate", branch = "polkadot-v0.9.26-libp2p" }

# Cumulus dependencies
cumulus-client-cli = { git = "https://github.com/zeitgeistpm/cumulus", branch = "polkadot-v0.9.26-libp2p" }
cumulus-client-collator = { git = "https://github.com/zeitgeistpm/cumulus", branch = "polkadot-v0.9.26-libp2p" }
cumulus-client-consensus-common = { git = "https://github.com/zeitgeistpm/cumulus", branch = "polkadot-v0.9.26-libp2p" }
cumulus-client-network = { git = "https://github.com/zeitgeistpm/cumulus", branch = "polkadot-v0.9.26-libp2p" }
cumulus-client-service = { git = "https://github.com/zeitgeistpm/cumulus", branch = "polkadot-v0.9.26-libp2p" }
cumulus-primitives-core = { git = "https://github.com/zeitgeistpm/cumulus", branch = "polkadot-v0.9.26-libp2p" }
cumulus-primitives-parachain-inherent = { git = "https://github.com/zeitgeistpm/cumulus", branch = "polkadot-v0.9.26-libp2p" }
cumulus-relay-chain-inprocess-interface = { git = "https://github.com/zeitgeistpm/cumulus", branch = "polkadot-v0.9.26-libp2p" }
cumulus-relay-chain-interface = { git = "https://github.com/zeitgeistpm/cumulus", branch = "polkadot-v0.9.26-libp2p" }
cumulus-relay-chain-rpc-interface = { git = "https://github.com/zeitgeistpm/cumulus", branch = "polkadot-v0.9.26-libp2p" }

# Polkadot dependencies
polkadot-cli = { git = "https://github.com/zeitgeistpm/polkadot", branch = "release-v0.9.26-libp2p" }
polkadot-parachain = { git = "https://github.com/zeitgeistpm/polkadot", branch = "release-v0.9.26-libp2p" }
polkadot-primitives = { git = "https://github.com/zeitgeistpm/polkadot", branch = "release-v0.9.26-libp2p" }
polkadot-service = { git = "https://github.com/zeitgeistpm/polkadot", branch = "release-v0.9.26-libp2p" }
polkadot-test-service = { git = "https://github.com/zeitgeistpm/polkadot", branch = "release-v0.9.26-libp2p" }

[build-dependencies]
substrate-build-script-utils = { git = "https://github.com/zeitgeistpm/substrate", branch = "polkadot-v0.9.26-libp2p" }

[features]
runtime-benchmarks = [ "parachain-template-runtime/runtime-benchmarks" ]
try-runtime = [ "parachain-template-runtime/try-runtime" ]
